Fix text fonts on mobile

--- a/_sass/_page.scss
+++ b/_sass/_page.scss
@@ -472,5 +472,11 @@ figcaption {
 
 #explainer {
    text-align: center;
-   font-weight: 500;
+   font-weight: 500; 
+	 font-size:0.75rem; 
+   
+   @include media($medium) {
+	  font-size:1.125rem;
+
+  }
 }
